--- a/Hello.html
+++ b/Hello.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 
-<h1>{{greeting}}</h1>
+<div id="app">
+    <h1>{{greeting}}</h1>
+</div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 
+<script>
+    new Vue({
+        el: '#app',
+        data:{
+            greeting: "Hello VueJS!"
+        }
+    });
+</script>
